@@ -333,14 +333,14 @@ public abstract class AbstractType<T> implements Comparator<ByteBuffer>
     }
 
     /**
-     * Returns an AbstractType instance that is equivalent to this one, but with all nested UDTs explicitly frozen and
-     * all collections in UDTs explicitly frozen.
+     * Returns an AbstractType instance that is equivalent to this one, but with all nested UDTs and collections
+     * explicitly frozen.
      *
      * This is only necessary for {@code 2.x -> 3.x} schema migrations, and can be removed in Cassandra 4.0.
      *
-     * See CASSANDRA-11609
+     * See CASSANDRA-11609 and CASSANDRA-11613.
      */
-    public AbstractType<?> freezeNestedUDTs()
+    public AbstractType<?> freezeNestedMulticellTypes()
     {
         return this;
     }
