@@ -304,8 +304,11 @@ public class UserType extends TupleType
     }
 
     @Override
-    public AbstractType<?> freezeNestedUDTs()
+    public AbstractType<?> freezeNestedMulticellTypes()
     {
+        if (!isMultiCell())
+            return this;
+
         // the behavior here doesn't exactly match the method name: we want to freeze everything inside of UDTs
         List<AbstractType<?>> newTypes = fieldTypes().stream()
                 .map(subtype -> (subtype.isFreezable() && subtype.isMultiCell() ? subtype.freeze() : subtype))
