@@ -684,9 +684,12 @@ public final class LegacySchemaMigrator
         AbstractType<?> validator = parseType(row.getString("validator"));
 
         // In the 2.x schema we didn't store UDT's with a FrozenType wrapper because they were implicitly frozen.  After
-        // CASSANDRA-7423 (non-frozen UDTs), this is no longer true, so we need to freeze nested UDTs to properly
-        // migrate the schema.  See CASSANDRA-11609.
-        validator = validator.freezeNestedUDTs();
+        // CASSANDRA-7423 (non-frozen UDTs), this is no longer true, so we need to freeze UDTs and nested freezable
+        // types (UDTs and collections) to properly migrate the schema.  See CASSANDRA-11609 and CASSANDRA-11613.
+        if (validator.isUDT() && validator.isMultiCell())
+            validator = validator.freeze();
+        else
+            validator = validator.freezeNestedMulticellTypes();
 
         return new ColumnDefinition(keyspace, table, name, validator, componentIndex, kind);
     }
